--- a/Framework/Client/Include/Client.vcxproj.filters
+++ b/Framework/Client/Include/Client.vcxproj.filters
@@ -625,6 +625,9 @@
     <Filter Include="02. GameObject\04. UI\10. Veil">
       <UniqueIdentifier>{f7a2054e-db25-43b9-8663-31fc26aa39b9}</UniqueIdentifier>
     </Filter>
+    <Filter Include="02. GameObject\06. FieldObj\08. TriggerObj">
+      <UniqueIdentifier>{c47fb144-2729-4206-8425-c38ee0d7975d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Header\MainApp.h">
@@ -1214,9 +1217,6 @@
     <ClInclude Include="..\Header\Player_State_Dance.h">
       <Filter>02. GameObject\01. Player\State\15. Dance</Filter>
     </ClInclude>
-    <ClInclude Include="..\Header\NueFlower.h">
-      <Filter>02. GameObject\07. EnvironmentObj\02. NueFlower</Filter>
-    </ClInclude>
     <ClInclude Include="..\Header\RabitObj.h">
       <Filter>02. GameObject\06. FieldObj\05. HitObj\03. RabitObj</Filter>
     </ClInclude>
@@ -1268,6 +1268,21 @@
     </ClInclude>
     <ClInclude Include="..\Header\UI_Veil.h">
       <Filter>02. GameObject\04. UI\10. Veil</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Header\FloorDoor.h" />
+    <ClInclude Include="..\Header\Scene_MonkeyForest3.h" />
+    <ClInclude Include="..\Header\TrashPrist.h" />
+    <ClInclude Include="..\Header\NueFlower.h">
+      <Filter>02. GameObject\07. EnvironmentObj\02. NueFlower</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Header\RabbitMgr.h">
+      <Filter>02. GameObject\06. FieldObj\05. HitObj\03. RabitObj</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Header\TurretBullet.h">
+      <Filter>02. GameObject\16. Bullet\03. Turret_Bullet</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Header\TriggerObj.h">
+      <Filter>02. GameObject\06. FieldObj\08. TriggerObj</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -1874,6 +1889,18 @@
     </ClCompile>
     <ClCompile Include="..\Code\UI_Veil.cpp">
       <Filter>02. GameObject\04. UI\10. Veil</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\FloorDoor.cpp" />
+    <ClCompile Include="..\Code\Scene_MonkeyForest3.cpp" />
+    <ClCompile Include="..\Code\TrashPrist.cpp" />
+    <ClCompile Include="RabbitMgr.cpp">
+      <Filter>02. GameObject\06. FieldObj\05. HitObj\03. RabitObj</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\TurretBullet.cpp">
+      <Filter>02. GameObject\16. Bullet\03. Turret_Bullet</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\TriggerObj.cpp">
+      <Filter>02. GameObject\06. FieldObj\08. TriggerObj</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
