--- a/Framework/Client/Include/Client.vcxproj.filters
+++ b/Framework/Client/Include/Client.vcxproj.filters
@@ -628,8 +628,8 @@
     <Filter Include="02. GameObject\06. FieldObj\08. TriggerObj">
       <UniqueIdentifier>{c47fb144-2729-4206-8425-c38ee0d7975d}</UniqueIdentifier>
     </Filter>
-    <Filter Include="02. GameObject\07. EnvironmentObj\03. Nexus">
-      <UniqueIdentifier>{52f96e91-5773-4e05-81fe-0efa68f2cc8d}</UniqueIdentifier>
+    <Filter Include="02. GameObject\04. UI\11. Inven">
+      <UniqueIdentifier>{e4bfcc87-0123-4dbf-8771-0be3b8fcc18c}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -1135,8 +1135,6 @@
     <ClInclude Include="..\Header\UI_SlotTwo.h">
       <Filter>02. GameObject\04. UI\00. PlayerInfo\01. QuickSlot\00. Slot</Filter>
     </ClInclude>
-    <ClInclude Include="..\Header\InvenTabButton.h" />
-    <ClInclude Include="..\Header\InventoryUI.h" />
     <ClInclude Include="..\Header\Door.h">
       <Filter>02. GameObject\11. FixedObj</Filter>
     </ClInclude>
@@ -1287,13 +1285,15 @@
     <ClInclude Include="..\Header\TriggerObj.h">
       <Filter>02. GameObject\06. FieldObj\08. TriggerObj</Filter>
     </ClInclude>
-    <ClInclude Include="..\Header\Nexus.h">
-      <Filter>02. GameObject\07. EnvironmentObj\03. Nexus</Filter>
+    <ClInclude Include="..\Header\InvenTabButton.h">
+      <Filter>02. GameObject\04. UI\11. Inven</Filter>
     </ClInclude>
-    <ClInclude Include="..\Header\DefenceEnter.h">
-      <Filter>02. GameObject\09. Portal</Filter>
+    <ClInclude Include="..\Header\InventoryUI.h">
+      <Filter>02. GameObject\04. UI\11. Inven</Filter>
     </ClInclude>
-    <ClInclude Include="..\Header\MonsterSpawner.h" />
+    <ClInclude Include="..\Header\UI_SlotItems.h">
+      <Filter>02. GameObject\04. UI\11. Inven</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Code\MainApp.cpp">
@@ -1784,8 +1784,6 @@
     <ClCompile Include="..\Code\UI_SlotTwo.cpp">
       <Filter>02. GameObject\04. UI\00. PlayerInfo\01. QuickSlot\00. Slot</Filter>
     </ClCompile>
-    <ClCompile Include="..\Code\InvenTabButton.cpp" />
-    <ClCompile Include="..\Code\InventoryUI.cpp" />
     <ClCompile Include="..\Code\Door.cpp">
       <Filter>02. GameObject\11. FixedObj</Filter>
     </ClCompile>
@@ -1912,13 +1910,15 @@
     <ClCompile Include="..\Code\TriggerObj.cpp">
       <Filter>02. GameObject\06. FieldObj\08. TriggerObj</Filter>
     </ClCompile>
-    <ClCompile Include="..\Code\Nexus.cpp">
-      <Filter>02. GameObject\07. EnvironmentObj\03. Nexus</Filter>
+    <ClCompile Include="..\Code\InvenTabButton.cpp">
+      <Filter>02. GameObject\04. UI\11. Inven</Filter>
     </ClCompile>
-    <ClCompile Include="..\Code\DefenceEnter.cpp">
-      <Filter>02. GameObject\09. Portal</Filter>
+    <ClCompile Include="..\Code\InventoryUI.cpp">
+      <Filter>02. GameObject\04. UI\11. Inven</Filter>
     </ClCompile>
-    <ClCompile Include="..\Code\MonsterSpawner.cpp" />
+    <ClCompile Include="..\Code\UI_SlotItems.cpp">
+      <Filter>02. GameObject\04. UI\11. Inven</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="Client.ico">
